--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <header class="header">
-    <div lass="container">
+    <div class="container">
         <h1>Hello, my name is <span class="bold-text">Areej Fatima</span></h1>
         <img src="./img/Areej Fatima.jpg" alt="Photo of Areej Fatima"/>
     </div>
