--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h2>My most recent <span class="bold-text">article</span></h2>
             <article>
                 <h3>Design systems that scale</h3>
-                <p>Written by Areej Fatima on March 16, 2024</p>
+                <p class="small">Written by Areej Fatima on March 16, 2024</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat pellentesque nulla, sed vehicula magna blandit ac. Ut blandit pharetra consequat. Nullam ut.... <a href="#">continue reading</a></p>
                 
             </article>
