--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="header">
     <div class="container">
         <h1>Hello, my name is <span class="bold-text">Areej Fatima</span></h1>
-        <img src="./img/Areej Fatima.jpg" alt="Photo of Areej Fatima"/>
+        <img src="./img/Aree.jpg" alt="Photo of Areej Fatima"/>
     </div>
     </header>
 
